SET(OPENCHERRY_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../Utilities/openCherry)

INCLUDE(${OPENCHERRY_SOURCE_DIR}/CMake/FindPoco.cmake)

IF(BUILD_OPENCHERRY)

  FIND_POCO()

  ADD_SUBDIRECTORY(org.mitk.core)

  IF(USE_QT AND DESIRED_QT_VERSION EQUAL 4)
    ADD_SUBDIRECTORY(org.mitk.qt)
  ENDIF(USE_QT AND DESIRED_QT_VERSION EQUAL 4)
   
ENDIF(BUILD_OPENCHERRY)