
IF(BUILD_OPENCHERRY)

  FIND_PACKAGE(openCherry REQUIRED)
  
  IF(BUILD_ALL_OPENCHERRY_PLUGINS)
    SET(BUILD_ALL_PLUGINS_OPTION "FORCE_BUILD_ALL")
  ELSE(BUILD_ALL_OPENCHERRY_PLUGINS)
    SET(BUILD_ALL_PLUGINS_OPTION )
  ENDIF(BUILD_ALL_OPENCHERRY_PLUGINS)

  MACRO_COLLECT_PLUGINS(OUTPUT_DIR ${LIBRARY_OUTPUT_PATH}/Bundles ${BUILD_ALL_PLUGINS_OPTION})
   
ENDIF(BUILD_OPENCHERRY)