INCLUDE_DIRECTORIES(${${KITNAME}_INCLUDE_DIRS})



IF(MITK_BUILD_SINGLE_CORE_LIB)
SET(ALL_FILES_CPP "")
SET(ALL_FILES_H "")
FOREACH(core ${CORE_DIRECTORIES})
  SET(CPP_FILES "")
  SET(H_FILES "")
  INCLUDE(${core}/files.cmake)
  FOREACH(cpp_file ${CPP_FILES})
    SET(ALL_FILES_CPP ${ALL_FILES_CPP} ${core}/${cpp_file})
  ENDFOREACH(cpp_file)
  FOREACH(h_file ${H_FILES})
    SET(ALL_FILES_H ${ALL_FILES_H} ${core}/${h_file})
  ENDFOREACH(h_file)
  SET(ALL_FILES_CPP ${ALL_FILES_CPP} ${CPP_FILES_GENERATED})
  SET(CPP_FILES_GENERATED "")
ENDFOREACH(core)
ORGANIZE_SOURCES(${ALL_FILES_CPP} ${ALL_FILES_H})

FIND_PACKAGE(OpenGL)
IF(NOT OPENGL_FOUND)
  MESSAGE("GL is required for MITK rendering")
ENDIF(NOT OPENGL_FOUND )
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${IPSEGMENTATION_INCLUDE_DIR} ${ANN_INCLUDE_DIR})

# modify list of tool filenames. For the classes inside these files, we'll create ITK factories
FOREACH(TOOL_FILE ${TOOL_FILES})
  STRING(REGEX REPLACE "(.*)Tool" "Interactions/\\1Tool" TOOL_FILE ${TOOL_FILE})
  SET(NEW_TOOL_FILES ${TOOL_FILE} ${NEW_TOOL_FILES})
ENDFOREACH(TOOL_FILE ${TOOL_FILES})
SET(TOOL_FILES ${NEW_TOOL_FILES})
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR})
MITK_GENERATE_TOOLS_LIBRARY()

OPTION(MITK_BUILD_SHARED_CORE "Build the core lib as shared library." ON)
IF(MITK_BUILD_SHARED_CORE)
IF(NOT MITK_BUILD_SINGLE_CORE_LIB)
MESSAGE(SEND_ERROR "Please turn on MITK_BUILD_SINGLE_CORE_LIB for shared core library!")
ENDIF(NOT MITK_BUILD_SINGLE_CORE_LIB)
IF(CMAKE_COMPILER_IS_GNUCC)
OPTION(MITK_USE_GCC_VISIBILITY "Use gcc's -fvisibility option to hide exported symbols" OFF) 
IF(MITK_USE_GCC_VISIBILITY)
ADD_DEFINITIONS("-fvisibility=hidden")
ENDIF(MITK_USE_GCC_VISIBILITY)
ENDIF(CMAKE_COMPILER_IS_GNUCC)
ADD_LIBRARY(mitkCore${LIBPOSTFIX} SHARED ${ALL_FILES_CPP} ${ALL_FILES_H} ${CORRESPONDING_H_FILES} ${CORRESPONDING_TXX_FILES} ${GLOBBED_TXX_FILES} ${GLOBBED_DOX_FILES} ${GLOBBED_UI_FILES} ${TOOL_CPPS})

# install only if shared lib (for now)
INSTALL(TARGETS mitkCore${LIBPOSTFIX}
   RUNTIME DESTINATION bin
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib/static
)


# install only if shared lib (for now)
INSTALL(TARGETS mitkCore${LIBPOSTFIX}
   RUNTIME DESTINATION bin
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib/static
)

ELSE(MITK_BUILD_SHARED_CORE)
ADD_LIBRARY(mitkCore${LIBPOSTFIX} ${ALL_FILES_CPP} ${TOOL_CPPS})
ENDIF(MITK_BUILD_SHARED_CORE)
TARGET_LINK_LIBRARIES(mitkCore${LIBPOSTFIX} ${LIBRARIES_FOR_${KITNAME}_CORE}  ${IPFUNC_LIBRARY} ipSegmentation ann)
TARGET_LINK_LIBRARIES(mitkCore pic2vtk IIL4MITK ${OPENGL_LIBRARIES} )
IF(MSVC_IDE OR MSVC_VERSION)
TARGET_LINK_LIBRARIES(mitkCore psapi.lib)
ENDIF(MSVC_IDE OR MSVC_VERSION)
ELSE(MITK_BUILD_SINGLE_CORE_LIB)
FOREACH(core ${CORE_DIRECTORIES})
ADD_SUBDIRECTORY(${core}) 
ENDFOREACH(core)
ENDIF(MITK_BUILD_SINGLE_CORE_LIB)

SET(TOOL_CPPS "")

OPTION(BUILD_TESTING "Build the MITK Core tests." ON)
IF(BUILD_TESTING)
ENABLE_TESTING()
ADD_SUBDIRECTORY(Testing)
ENDIF(BUILD_TESTING)

OPTION(MITK_BUILD_IGT "Build the MITK image guided therapy library" ON)

IF(MITK_BUILD_IGT)
  ADD_SUBDIRECTORY(IGT)
ENDIF(MITK_BUILD_IGT)
