IF(MITK_USE_QT AND QT4_FOUND)
  ADD_SUBDIRECTORY(Qmitk)
ENDIF()

IF(MITK_USE_BLUEBERRY)
  ADD_SUBDIRECTORY(Bundles)
  
  IF(BLUEBERRY_ENABLE_GUI_TESTING)
    SET (MITK_ENABLE_GUI_TESTING OFF CACHE BOOL "Enables BlueBerry based GUI Tests for MITK Bundles")
    IF(MITK_ENABLE_GUI_TESTING)
      ADD_SUBDIRECTORY(BundleTesting)
    ENDIF(MITK_ENABLE_GUI_TESTING)
  ENDIF(BLUEBERRY_ENABLE_GUI_TESTING)
ENDIF()

